src/main/java/com/example/configs/handler/errors/NotFoundException.java
package com.example.configs.handler.errors;

public class NotFoundException extends RuntimeException {
    private static final String DESCRIPTION = "Not Found Exception";

    public NotFoundException(String detail) {
        super(DESCRIPTION + ". " + detail);
    }

}
